--- a/src/WirePeep/MainWindow.xaml
+++ b/src/WirePeep/MainWindow.xaml
@@ -1,18 +1,19 @@
-﻿<Window x:Class="WirePeep.MainWindow"
+﻿<m:ExtendedWindow x:Class="WirePeep.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:m="http://menees.com/xaml"
 		xmlns:local="clr-namespace:WirePeep"
 		mc:Ignorable="d"
-		Title="WirePeep - Network Downtime Monitor" Height="450" Width="800"
-		TextOptions.TextFormattingMode="Display">
+		Title="WirePeep - Network Downtime Monitor" Height="450" Width="800">
 	<Window.CommandBindings>
 		<CommandBinding Command="local:Commands.AddLocation" Executed="AddLocationExecuted" />
 		<CommandBinding Command="local:Commands.Exit" Executed="ExitExecuted" />
 		<CommandBinding Command="local:Commands.ExportLog" Executed="ExportLogExecuted" />
 		<CommandBinding Command="local:Commands.ViewOptions" Executed="ViewOptionsExecuted" />
 		<CommandBinding Command="Help" Executed="HelpExecuted" />
+		<CommandBinding Command="local:Commands.About" Executed="AboutExecuted" />
 	</Window.CommandBindings>
 	<Grid>
 		<Grid.RowDefinitions>
@@ -26,12 +27,13 @@
 				<MenuItem Header="_Add Location..." Command="local:Commands.AddLocation"/>
 				<MenuItem Header="_Export Log..." Command="local:Commands.ExportLog"/>
 				<Separator/>
-				<MenuItem Header="_Options" Command="local:Commands.ViewOptions"/>
+				<MenuItem Header="_Options..." Command="local:Commands.ViewOptions"/>
 				<Separator/>
 				<MenuItem Header="E_xit" Command="local:Commands.Exit"/>
 			</MenuItem>
 			<MenuItem Header="_Help">
 				<MenuItem Header="www.Wire_Peep.com" Command="Help"/>
+				<MenuItem Header="_About..." Command="local:Commands.About"/>
 			</MenuItem>
 		</Menu>
 		<DataGrid IsReadOnly="True" Grid.Row="1">
@@ -75,4 +77,4 @@
 			</StatusBarItem>
 		</StatusBar>
 	</Grid>
-</Window>
+</m:ExtendedWindow>
